name:                haskus-studio
version:             0.1.0.0
-- synopsis:            
description:         Haskus Haskell IDE
license:             BSD3
license-file:        LICENSE
author:              Sylvain Henry
maintainer:          sylvain@haskus.fr
-- copyright:           
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable ghc-studio
  main-is:             Main.hs
  other-modules:
         CmdLine
      ,  Profiles

  other-extensions:    LambdaCase, TemplateHaskell
  build-depends:
         base                    >=4.9
      ,  network                 >=2.6
      ,  file-embed              >=0.0
      ,  containers              >=0.5
      ,  vector                  >=0.11
      ,  blaze-html              >=0.8
      ,  bytestring              >=0.10
      ,  optparse-applicative    >=0.12
      ,  happstack-server        >= 7.4
      ,  megaparsec              >= 5.0
      ,  HTTP                    >= 4000
      ,  temporary               >= 1.2
      ,  filepath                >= 1.4
      ,  highlighting-kate       >= 0.6
      ,  directory               >= 1.2
      ,  time                    >= 1.6
      ,  stm                     >= 2.4
      ,  safe                    >= 0.3
      ,  extra                   >= 1.4
      ,  deepseq                 >= 1.4
      ,  ghc
      ,  ghc-paths
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wall -O2
